syntax = "proto3";

option java_package = "com.example.demo";
option java_multiple_files = true;

service SalaryService {
  rpc isAllowedToCheckSalary (SalaryRequest) returns (SalaryResponse);
}

message SalaryRequest {
  string currentUser = 1;
  string employee = 2;

}

message SalaryResponse {
  bool isAllowed = 1;
}